# networkmanager

./: CMakeLists.txt  main.cpp  networkmanager.cpp  networkmanager.hpp  networkmanager.qrc  networkmanager.ru_RU.qm  networkmanager.ru_RU.ts  networkmanagerinterface.cpp  networkmanagerinterface.hpp
qml/: ui.qml
